[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoraos"
version = "1.0.0"
description = "端侧记忆认知系统 - 面向法务取证、科研协作与个人数字资产的本地RAG AI审计中枢"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10, <3.11"
authors = [
    { name = "iug-cy", email = "iug-cy@example.com" }
]
maintainers = [
    { name = "iug-cy" }
]
keywords = [
    "RAG", "本地大模型", "Ollama", "记忆系统", "聊天记录分析",
    "法务取证", "端侧AI", "向量数据库", "ChromaDB", "语义检索",
    "BGE-M3", "Qwen2", "个人数字资产"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic"
]
# 核心依赖
dependencies = [
    # Web 可视化前端
    "streamlit==1.55.0",
    # 向量数据库与存储
    "chromadb==1.4.1",
    # Embedding 模型加载与推理
    "sentence-transformers==5.2.2",
    "transformers==5.0.0",
    "torch==2.10.0",
    "safetensors==0.7.0",
    "modelscope==1.34.0",
    # 大模型调用
    "ollama==0.6.1",
    # 文档解析与文本处理
    "python-docx==1.2.0",
    "pandas==2.3.3",
    "langchain==1.2.7",
    "langchain-core==1.2.7",
    "langchain-text-splitters==1.1.0",
    "python-dateutil==2.9.0.post0",
    # 网络请求与工具库
    "tqdm==4.67.2",
    "numpy==2.2.6",
    "pillow==12.1.0",
    "pydantic_core==2.41.5",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "PyYAML==6.0.2",
    "watchdog~=6.0.0",
    "requests~=2.33.1"
]

# 项目URL配置
[project.urls]
Homepage = "https://github.com/iug-cy/pss"
Repository = "https://github.com/iug-cy/pss.git"
Documentation = "https://github.com/iug-cy/pss#readme"
"Bug Tracker" = "https://github.com/iug-cy/pss/issues"

# 可选依赖（开发/测试环境专用）
[project.optional-dependencies]
dev = [
    # 代码格式化与检查
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    # 测试框架
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    # 打包与发布
    "build>=1.2.0",
    "twine>=5.0.0"
]

# 命令行入口（安装后可直接全局调用）
[project.scripts]
memoraos = "main:main"
memoraos-cli = "core.cli:main"


[tool.black]
line-length = 120
target-version = ["py310"]
skip-string-normalization = true

# 代码检查工具 ruff 配置
[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]
fix = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"web/*.py" = ["E402"]

# 类型检查工具 mypy 配置
[tool.mypy]
python_version = "3.10"
strict = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["pss_env/", "data/", "chroma_db/", "pss_md/"]

# 测试框架 pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=core --cov-report=term-missing"